boilerplate of flask app codename BO
